# protocols_dispatcher

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/protocols_dispatcher/: dispatcher.py
src/protocols_dispatcher/transports/: __init__.py  serial.py
tests/: conftest.py  helpers.py  test_dispatcher.py
